[package]
name = "recruitment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
lazy_static = "1.4.0"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
thiserror = "1.0.57"
chrono = { version = "0.4.34", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4"] }
backoff = { version = "0.4.0", features = ["tokio"] }
futures = "0.3.30"
async-channel = "2.2.0"
rand = "0.8.5"
